test/implicitDup21_9.slq
def foo(x:ğ”¹){
	y:=dup(x); /// error
	if X(dup(y)){
		r:=X(x);
	}else{
		r:=x;
	}
	return r;
}

